@@ -4,6 +4,7 @@ serd (0.32.5) unstable; urgency=medium
   * Drop graphs when writing Turtle output
   * Fix handling of bad predicates in anonymous blank nodes
   * Fix handling of some invalid EOF cases in lax mode
+  * Fix indentation when ending anonymous nodes with many objects
   * Fix invalid characters in error messages
   * Fix reading numbers with no space before the final dot
   * Fix reading prefix names that start with "true." or "false."
@@ -11,7 +12,7 @@ serd (0.32.5) unstable; urgency=medium
   * Remove project and version number from man page OS field
   * Write a blank line between statements and Turtle/TriG directives
 
- -- David Robillard <d@drobilla.net>  Wed, 30 Jul 2025 18:29:12 +0000
+ -- David Robillard <d@drobilla.net>  Thu, 31 Jul 2025 19:06:12 +0000
 
 serd (0.32.4) stable; urgency=medium
 
